--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 product-grid">
       <!-- Example product card -->
       <div class="product-card">
-        <img src="/assets/shampoo.png" alt="Eco Shampoo" class="rounded mb-3 h-48 w-full object-cover" />
+        <img src="assets/shampoo.png" alt="Eco Shampoo" class="rounded mb-3 h-48 w-full object-cover" />
         <h3 class="text-xl font-semibold">Organic Shampoo</h3>
         <p class="text-sm text-gray-500 mb-2">Eco Rating: 🌿🌿🌿🌿</p>
         <button>Buy</button>
