--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="max-w-6xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold">FinSaathi</h1>
       <nav class="space-x-4">
-        <a href="#" class="hover:underline">Home</a>
-        <a href="#" class="hover:underline">Products</a>
-        <a href="#" class="hover:underline">Dashboard</a>
+        <a href="#" id="home-link" class="hover:underline">Home</a>
+        <a href="#product-grid" id="products-link" class="hover:underline">Products</a>
+        <a href="#" id="dashboard-link" class="hover:underline">Dashboard</a>
       </nav>
     </div>
   </header>
@@ -23,21 +23,14 @@
   <!-- Hero Section -->
   <main class="max-w-6xl mx-auto p-6">
     <section class="text-center my-12">
-      <h2 class="text-4xl font-bold mb-4">Shop Sustainably, Live Responsibly</h2>
-      <p class="text-lg text-gray-600">FinSaathi helps you track your eco-impact and shop green-certified brands.</p>
-      <button class="mt-6 px-6 py-3 bg-green-500 text-white rounded-xl shadow hover:bg-green-600 transition">Explore Now</button>
+      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-4">Shop Sustainably, Live Responsibly</h2>
+      <p class="text-base sm:text-lg text-gray-600">FinSaathi helps you track your eco-impact and shop green-certified brands.</p>
+      <button id="explore-btn" class="mt-6 px-6 py-3 bg-green-500 text-white rounded-xl shadow hover:bg-green-600 transition">Explore Now</button>
     </section>
 
     <!-- Product Grid -->
-    <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 product-grid">
-      <!-- Example product card -->
-      <div class="product-card">
-        <img src="assets/shampoo.png" alt="Eco Shampoo" class="rounded mb-3 h-48 w-full object-cover" />
-        <h3 class="text-xl font-semibold">Organic Shampoo</h3>
-        <p class="text-sm text-gray-500 mb-2">Eco Rating: 🌿🌿🌿🌿</p>
-        <button>Buy</button>
-      </div>
-      <!-- More product cards will be injected dynamically via app.js -->
+    <section id="product-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 product-grid">
+      <!-- Products will be injected via JavaScript -->
     </section>
   </main>
 
